--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -8,24 +8,16 @@
 <p>Результаты вступительных экзаменов</p>
 <table border="1">
     <tr>
-        <td>ID участника</td>
-        <td>Математика (тест)</td>
-        <td>Математика</td>
-        <td>Филология</td>
-        <td>История</td>
-        <td>Естествознание</td>
-        <td>Комментарии</td>
+    {% for subject, score in results %}
+        <td>{{ subject }}</td>
+    {% endfor %}
     </tr>
     <tr>
-        <td>{{ results.student_id }}</td>
-        <td>{{ results.math }}</td>
-        <td>{{ results.math_test }}</td>
-        <td>{{ results.philology }}</td>
-        <td>{{ results.history }}</td>
-        <td>{{ results.science }}</td>
-        <td>{{ results.comments }}</td>
-
+    {% for subject, score in results %}
+        <td>{{ score }}</td>
+    {% endfor %}
     </tr>
+    
 </table>
 </body>
 </html>
