--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-<form action="/results" method="post" name="student_id">
-    {{ form.hidden_tag() }}
-    Введите идентификационный номер участника
-    {{ form.id(size=10) }}
-    <p><input type="submit" value="Показать результаты"></p>
+
+<form action="{{ url_for("results") }}" method="post" name="student_id">
+    <div class="form-group">
+        {{ form.hidden_tag() }}
+        <label for="id">ID участника</label>
+
+        {{ form.id(class="form-control") }}
+
+        <p><button type="submit" class="btn btn-default">Показать результаты</button>
+    </div>
 </form>
+
 {% endblock %}
