--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,15 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-
-<form action="{{ url_for("results") }}" method="post" name="student_id">
-    <div class="form-group">
-        {{ form.hidden_tag() }}
-        <label for="id">ID участника</label>
-
-        {{ form.id(class="form-control") }}
-
-        <p><button type="submit" class="btn btn-default">Показать результаты</button>
-    </div>
-</form>
-
+{% from "macros.html" import idform %}
+{{ idform(form) }}
 {% endblock %}
