--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -3,21 +3,12 @@
 {% if notfound %}
 <p>Кажется, такого участника у нас не было</p>
 <p>Попробуйте еще раз</p>
-<form action="{{ url_for("results") }}" method="post" name="student_id">
-    <div class="form-group">
-        {{ form.hidden_tag() }}
-        <label for="id">ID участника</label>
-
-        {{ form.id(class="form-control") }}
-
-        <p><button type="submit" class="btn btn-default">Показать результаты</button>
-    </div>
-</form>
-
+{% from "macros.html" import idform %}
+{{ idform(form) }}
 {% else %}
 <h3>Результаты участника  №{{ student_id }}</h3>
 
-<table class="table">
+<table class="table table-hover">
 
     {% for subject, score in table %}
         <tr>
