--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,9 +17,14 @@
             </ul>
         </div>
     </nav>
-    <div class="row">
-        <div class="col-md-5 col-md-offset-4">
-            {% block content %}{% endblock %}
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-6">
+                {% block content %}{% endblock %}
+            </div>
+            <div class="col-sm-3"></div>
         </div>
     </div>
 </body>
