Added main page link to the navbar

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,9 @@
     <nav class="navbar navbar-default">
         <div class="navbar-header">
             <ul class="nav navbar-nav">
-                <li><a href="http://sch-int.ru">Школа "Интеллектуал"</a> </li>
+                <li><a href="/">Главная</a></li>
+                <li><a href="http://sch-int.ru">Школа "Интеллектуал"</a></li>
+
             </ul>
         </div>
     </nav>
