--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,11 +20,22 @@
         </div>
     </nav>
 
+
+
     <div class="container">
         <div class="row">
             <div class="col-sm-3"></div>
             <div class="col-sm-6">
                 {% block content %}{% endblock %}
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                        {% from "macros.html" import flash %}
+                            {% for category, message in messages %}
+                                {{ flash(message, category) }}
+                            {% endfor %}
+
+                      {% endif %}
+                    {% endwith %}
             </div>
             <div class="col-sm-3"></div>
         </div>
