--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -10,3 +10,9 @@
         </div>
     </form>
 {% endmacro %}
+
+{% macro flash(message, type) %}
+<div class="alert alert-{{ type }}">
+  {{ message }}
+</div>
+{% endmacro %}
