Moved favicon to static, added link to it in base.html head

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,7 @@
     <title>Поступление в 5 класс школы "Интеллектуал"</title>
     {% endif %}
     <link rel="stylesheet" type="text/css" href="{{ url_for('.static', filename="css/bootstrap.min.css") }}">
+    <link rel="icon" type="image/png" href="{{ url_for('.static', filename="favicon.ico") }}">
 </head>
 <body>
     <nav class="navbar navbar-default">
