Comments are now not showed if not exist

--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -15,6 +15,7 @@
             <td>{{ table|sum(attribute=1) }}</td>
         </tr>
 </table>
+{% if comments %}
 Комментарии: {{ comments }}
-
+{% endif %}
 {% endblock %}
