--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -3,16 +3,22 @@
 <h3>Результаты участника  №{{ student_id }}</h3>
 
 <table class="table table-hover">
-
+    <thead>
+        <th>Предмет</th>
+        <th>Результат</th>
+        <th>Максимум</th>
+    </thead>
     {% for subject, score, maxscore in table %}
         <tr>
             <td>{{ subject }}</td>
             <td>{{ score }}</td>
+            <td>{{ maxscore }}</td>
         </tr>
     {% endfor %}
         <tr>
             <td>Сумма</td>
             <td>{{ table|sum(attribute=1) }}</td>
+            <td>{{ table|sum(attribute=2) }}</td>
         </tr>
 </table>
 
