Fixed final value

--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -17,8 +17,8 @@
     {% endfor %}
         <tr>
             <td>Сумма</td>
-            <td>{{ table|sum(attribute=1) }}</td>
-            <td>{{ table|sum(attribute=2) }}</td>
+            <td>{{ final }}</td>
+            <td>60</td>
         </tr>
 </table>
 
