Made final result STRONG ~again~

--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -16,9 +16,9 @@
         </tr>
     {% endfor %}
         <tr>
-            <td>Сумма</td>
-            <td>{{ final }}</td>
-            <td>60</td>
+            <td><strong>Итог</strong></td>
+            <td><strong>{{ final }}</strong></td>
+            <td><strong>60</strong></td>
         </tr>
 </table>
 
