--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h3>Результаты участника  №{{ student_id }}</h3>
+<p>Итог - это сумма теста по математике, нормированного на 20 баллов, и двух лучших результатов по выбору</p>
 
 <table class="table table-hover">
     <thead>
