Added Yandex.Webmaster authorization meta-tag

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name='yandex-verification' content='7b3e8466873d31f2' />
     {% if title %}
     <title>{{ title }}</title>
     {% else %}
