Added new  info message

--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -21,5 +21,5 @@
             <td><strong>40</strong></td>
         </tr>
 </table>
-
+<p>По математике засчитывается лучший из двух результатов</p>
 {% endblock %}
