--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -4,7 +4,7 @@
             {{ form.hidden_tag() }}
             <label for="id">ID участника</label>
 
-            {{ form.id(class="form-control") }}
+            {{ form.id(class="form-control", placeholder="Например: 5479") }}
 
             <button type="submit" class="btn btn-default">Показать результаты</button>
         </div>
