--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
     {% if title %}
     <title>{{ title }}</title>
     {% else %}
-    <title>Поступление в 5 класс школы "Интеллектуал"</title>
+    <title>Поступление в школу "Интеллектуал"</title>
     {% endif %}
     <link rel="stylesheet" type="text/css" href="{{ url_for('.static', filename="css/bootstrap.min.css") }}">
     <link rel="icon" type="image/png" href="{{ url_for('.static', filename="favicon.ico") }}">
