--- a/web/app/templates/my_master.html
+++ b/web/app/templates/my_master.html
@@ -7,9 +7,9 @@
         <i class="glyphicon glyphicon-user"></i>
         {% if current_user.first_name -%}
         {{ current_user.first_name }}
-        {% else -%}
+        {% else %}
         {{ current_user.email }}
-        {%- endif %}<span class="caret"></span></a>
+        {% endif %}<span class="caret"></span></a>
     <ul class="dropdown-menu" role="menu">
         <li><a href="{{ url_for('security.logout') }}">Log out</a></li>
     </ul>
