--- a/web/app/templates/security/_macros.html
+++ b/web/app/templates/security/_macros.html
@@ -1,11 +1,11 @@
 {% macro render_field_with_errors(field) %}
-
+{% from "macros.html" import flash %}
 <div class="form-group">
     {{ field.label }} {{ field(class_='form-control', **kwargs)|safe }}
     {% if field.errors %}
-    <ul>
+    <ul style="list-style-type: none; padding: 0; margin: 0">
         {% for error in field.errors %}
-        <li>{{ error }}</li>
+        {{ flash(error, 'warning') }}
         {% endfor %}
     </ul>
     {% endif %}
