--- a/web/app/templates/base.html
+++ b/web/app/templates/base.html
@@ -9,6 +9,7 @@
     <title>Поступление в школу "Интеллектуал"</title>
     {% endif %}
     <link rel="stylesheet" type="text/css" href="{{ url_for('.static', filename="css/bootstrap.min.css") }}">
+    <link rel="script" href="{{ url_for('.static', filename="js/bootstrap.js") }}">
     <link rel="icon" type="image/png" href="{{ url_for('.static', filename="favicon.ico") }}">
 </head>
 <body>
