--- a/web/app/templates/base.html
+++ b/web/app/templates/base.html
@@ -6,7 +6,7 @@
     {% if title %}
     <title>{{ title }}</title>
     {% else %}
-    <title>Поступление в школу "Интеллектуал"</title>
+    <title>Поступление в школу  &laquo;Интеллектуал&raquo;</title>
     {% endif %}
     <link rel="stylesheet" type="text/css" href="{{ url_for('.static', filename="css/bootstrap.min.css") }}">
     <link rel="script" href="{{ url_for('.static', filename="js/bootstrap.js") }}">
@@ -17,7 +17,7 @@
         <div class="navbar-header">
             <ul class="nav navbar-nav">
                 <li><a href="/">Главная</a></li>
-                <li><a href="http://sch-int.ru">Школа "Интеллектуал"</a></li>
+                <li><a href="http://sch-int.ru">Школа &laquo;Интеллектуал&raquo;</a></li>
 
             </ul>
         </div>
