--- a/web/app/static/style.css
+++ b/web/app/static/style.css
@@ -1,10 +1,10 @@
-#header{
-    width: 100%;
-    height: 50px;
-    color: #86989B;
-    margin: 0;
+.table td.fit,
+.table th.fit {
+    white-space: nowrap;
+    width: 1%;
 }
 
-div{
-    background: #177199;
+.table-borderless td,
+.table-borderless th {
+    border: 0;
 }
