--- a/web/app/templates/base.html
+++ b/web/app/templates/base.html
@@ -9,7 +9,9 @@
     <title>Поступление в школу  &laquo;Интеллектуал&raquo;</title>
     {% endif %}
     <link rel="stylesheet" type="text/css" href="{{ url_for('.static', filename="css/bootstrap.min.css") }}">
-    <link rel="script" href="{{ url_for('.static', filename="js/bootstrap.js") }}">
+    <link rel="stylesheet" type="text/css"
+          href="{{ url_for('.static', filename="style.css") }}">
+
     <link rel="icon" type="image/png" href="{{ url_for('.static', filename="favicon.ico") }}">
 </head>
 <body>
